fixed z index issues

--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   position: relative;
-  background-color: #87ceeb;
+  background-color: #023e8a;
   color: white;
   box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
 }
@@ -35,7 +35,7 @@
   transition: 0.5s ease;
 }
 .nav-menu li:hover {
-  background-color: #a4dded;
+  background-color: #3fa7d6;
   cursor: pointer;
 }
 .hamburger {
@@ -63,6 +63,7 @@
     display: block;
   }
   .nav-menu ul {
+    z-index: 999;
     position: absolute;
     top: 60px;
     left: 0;
