--- a/src/Home/Profile.module.css
+++ b/src/Home/Profile.module.css
@@ -2,41 +2,38 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
 }
 
 .profile-top {
-  /* background: transparent url("./src/assets/background.jpeg") 0 0 no-repeat;
-  width: 100%;
-  /* background-image: url("./src/assets/background.jpeg");
-  background-size: cover;
-  background-position: fixed; */
   position: relative;
-  width: 100%;
-  background: transparent url("./src/assets/background.jpeg") no-repeat top
+  z-index: 10;
+  bottom: 60px;
+  background: transparent url("./src/assets/background.jpeg") no-repeat center
     center;
   background-size: cover !important;
   -webkit-background-size: cover !important;
   text-align: center;
-  width: 100vw;
-  height: 500px;
+  width: 100%;
+  height: clamp(300px, 40vh, 560px);
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .profile-top img {
-  width: 500px;
+  width: clamp(80px, 70vmin, 500px);
   position: relative;
-  top: 100px;
+  top: 40%;
   border-radius: 50%;
   border: 10px solid white;
 }
 
 .profile-bottom {
-  width: 100vw;
+  width: 100%;
   background-color: white;
-  padding-top: 200px;
-  height: 500px;
+  padding-top: 20vmin;
+  height: 45vh;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -61,9 +58,11 @@
 }
 
 .social li {
+  transition: 0.5s ease;
   padding: 20px;
 }
 
 .social li:hover {
   cursor: pointer;
+  transform: scale(1.25);
 }
