--- a/src/Home/Profile.module.css
+++ b/src/Home/Profile.module.css
@@ -1,54 +1,50 @@
-.profile {
+.profile,
+.profile-top,
+.profile-bottom {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  height: 100vh;
-}
-
-.profile-top {
-  position: relative;
-  z-index: 10;
-  bottom: 60px;
-  background: transparent url("/assets/background.jpeg") no-repeat center center;
-  background-size: cover !important;
-  -webkit-background-size: cover !important;
-  text-align: center;
-  width: 100%;
-  height: clamp(300px, 40vh, 560px);
-  display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.profile-top img {
-  width: clamp(80px, 70vmin, 500px);
+.profile {
+  height: 130svh;
+  margin-bottom: -60px;
+  min-height: 800px;
+}
+
+.profile-top {
+  width: 100%;
+  height: 100%;
   position: relative;
-  top: 40%;
-  border-radius: 50%;
-  border: 10px solid white;
+  z-index: 10;
+  bottom: 60px;
+  color: white;
+  background: transparent url("/assets/background.jpeg") no-repeat top center;
+  background-size: cover !important;
+  background-attachment: fixed;
+  -webkit-background-size: cover !important;
 }
 
 .profile-bottom {
-  width: 100%;
-  background-color: white;
-  padding-top: 20vmin;
-  height: 45vh;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  position: absolute;
+  top: 40svh;
 }
 
 .profile-banner {
-  font-size: 3rem;
+  text-align: center;
+  font-size: clamp(2rem, 10vw, 4rem);
   font-weight: bolder;
+  text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.8);
 }
 
 .profile-desc {
+  text-align: center;
   font-weight: lighter;
-  font-size: 1.2rem;
-  color: grey;
-  padding: 20px;
+  font-size: clamp(0.8rem, 4vw, 1.5rem);
+  color: white;
+  margin: 30px;
+  text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.8);
 }
 
 .social {
@@ -64,4 +60,11 @@
 .social li:hover {
   cursor: pointer;
   transform: scale(1.25);
+}
+
+/* Turn off parallax scrolling for tablets and phones */
+@media only screen and (max-device-width: 1600px) {
+  .profile-top {
+    background-attachment: scroll;
+  }
 }
