--- a/src/NavBar/NavBar.module.css
+++ b/src/NavBar/NavBar.module.css
@@ -8,14 +8,21 @@
   /* background-color: #023e8a; */
   background-color: transparent;
   color: white;
-  /* box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
-} */
 }
 
 .navbar-logo {
   border-radius: 50%;
   height: 40px;
   padding: 0 30px;
+}
+
+.navbar-brand {
+  padding: 0 30px;
+  text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.8);
+}
+
+.navbar-brand:hover {
+  cursor: pointer;
 }
 
 .nav-menu {
@@ -32,13 +39,15 @@
   height: 60px;
   display: flex;
   align-items: center;
+  text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.8);
   width: 100%;
   list-style-type: none;
   padding: 0 1.2rem;
   transition: 0.5s ease;
 }
 .nav-menu li:hover {
-  background-color: #3fa7d6;
+  /* background-color: #3fa7d6; */
+  background-color: grey;
   cursor: pointer;
 }
 .hamburger {
@@ -47,7 +56,8 @@
   width: 40px;
   padding: 0.5rem;
   border-radius: 50%;
-  background-color: #4682b4;
+  background-color: grey;
+  /* background-color: #4682b4; */
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
   position: absolute;
@@ -58,7 +68,9 @@
 }
 
 .hamburger:hover {
-  background-color: #2774ae;
+  background-color: darkgray;
+
+  /* background-color: #2774ae; */
 }
 
 @media screen and (max-width: 768px) {
@@ -74,7 +86,6 @@
     width: 100%;
     height: calc(100vh - 77px);
     background-color: #edede9;
-    /* border-top: 1px solid black; */
     display: none;
   }
   .nav-menu li {
