Finished about page

--- a/src/Home/About.module.css
+++ b/src/Home/About.module.css
@@ -1,18 +1,19 @@
 .about {
-  height: 80vh;
+  height: max-content;
+  min-height: 80vh;
   width: 100%;
-  min-height: 560px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: blanchedalmond;
 }
 
 .aboutMain {
   width: 100%;
-  padding-left: 3rem;
+  padding: 0 clamp(1rem, 10vw, 4rem);
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: center;
 }
 
 .aboutImg {
@@ -20,7 +21,7 @@
   width: clamp(200px, 30vh, 400px);
   margin-top: clamp(-200px, -15vh, -100px);
   border-radius: 50%;
-  border: 10px solid white;
+  border: 10px solid blanchedalmond;
 }
 
 .aboutTitle {
@@ -30,5 +31,54 @@
 }
 
 .typewriter {
-  font-size: clamp(1.5rem, 10vw, 2.5rem);
+  font-size: clamp(1.5rem, 5vw, 2.5rem);
+}
+
+.aboutText p {
+  margin: 1.5rem 0px;
+  font-size: clamp(1.2rem, 3vw, 1.4rem);
+  max-width: 60ch;
+  word-wrap: break-word;
+}
+
+.links {
+  padding-top: 10px;
+  display: flex;
+}
+
+.aboutButton {
+  color: #000;
+  margin: 1rem 1rem;
+  padding: 10px;
+  border: 3px solid black;
+  font-size: clamp(1.25rem, 6vw, 1.5rem);
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+}
+
+.aboutButton:hover {
+  cursor: pointer;
+  transition: 0.5s;
+  background-color: bisque;
+}
+
+.aboutButton:hover > .bounce {
+  animation: bounce 1.5s ease;
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-20px);
+  }
+  60% {
+    transform: translateY(-10px);
+  }
 }
