--- a/src/Home/About.module.css
+++ b/src/Home/About.module.css
@@ -49,7 +49,7 @@
 .aboutButton {
   color: #000;
   margin: 1rem 1rem;
-  padding: 10px;
+  padding: 20px;
   border: 3px solid black;
   font-size: clamp(1.25rem, 6vw, 1.5rem);
   display: flex;
@@ -65,6 +65,26 @@
 
 .aboutButton:hover > .bounce {
   animation: bounce 1.5s ease;
+}
+
+.aboutButton:hover > .bounceR {
+  animation: bounceR 1.5s ease;
+}
+
+@keyframes bounceR {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateX(0);
+  }
+  40% {
+    transform: translateX(20px);
+  }
+  60% {
+    transform: translateX(10px);
+  }
 }
 
 @keyframes bounce {
