--- a/src/Home/Project.module.css
+++ b/src/Home/Project.module.css
@@ -33,19 +33,19 @@
 
 .projectCards {
   height: fit-content;
-  padding: clamp(1rem, 5vw, 4rem);
+  padding: clamp(2rem, 6vw, 6rem);
   width: 100%;
   min-height: 85vh;
   background-color: #524f81;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-gap: clamp(1rem, 5vw, 8rem);
+  grid-gap: clamp(2rem, 6vw, 8rem);
 }
 
 .card {
-  border-radius: 8px;
+  border-radius: 12px;
+  overflow: hidden;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-
   height: 100%;
   background-color: white;
   display: flex;
@@ -78,8 +78,7 @@
   margin-right: 1rem;
   display: inline-block;
 }
-
-.projectCards:hover .card:hover {
+.card:hover {
   opacity: 0.9;
   transform: scale(1.1);
   cursor: pointer;
@@ -103,6 +102,7 @@
     align-items: center;
   }
   .card {
+    margin-top: 1.5rem;
     max-width: 80vw;
     height: 100%;
     background-color: white;
