--- a/src/Home/Experience.module.css
+++ b/src/Home/Experience.module.css
@@ -12,7 +12,7 @@
 .expHeader {
   width: 100%;
   height: 15vh;
-  background: url("/assets/experiences.jpeg") no-repeat center center;
+  background: url("/assets/experiences.webp") no-repeat center center;
   background-size: cover !important;
   background-attachment: fixed;
   -webkit-background-size: cover !important;
