--- a/src/Home/Contact.module.css
+++ b/src/Home/Contact.module.css
@@ -33,7 +33,8 @@
 }
 
 .social {
-  width: 20vw;
+  width: fit-content;
+  min-width: 20vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -41,6 +42,8 @@
 }
 
 .social h2 {
+  white-space: nowrap;
+  width: fit-content;
   margin: 2rem;
   color: #f06000;
 }
