--- a/src/Home/Project.module.css
+++ b/src/Home/Project.module.css
@@ -92,6 +92,16 @@
   opacity: 0.6;
 }
 
+.demo {
+  width: fit-content;
+  height: fit-content;
+  margin-top: 10px;
+  padding: 10px;
+  background-color: #778899;
+  border-radius: 10px;
+  color: white;
+}
+
 @media screen and (max-width: 1268px) {
   .card {
     display: flex;
