--- a/src/Home/Experience.module.css
+++ b/src/Home/Experience.module.css
@@ -20,7 +20,7 @@
   align-items: center;
   justify-content: center;
   color: white;
-  font-size: clamp(2rem, 10vw, 4rem);
+  font-size: clamp(2rem, 8vw, 4rem);
   font-weight: bolder;
   text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.8);
 }
@@ -41,6 +41,11 @@
   border-radius: 10px;
   width: clamp(80px, 25vw, 120px);
   height: clamp(80px, 25vw, 120px);
+}
+
+.desc {
+  margin-top: 20px;
+  margin-left: 20px;
 }
 
 @media screen and (max-width: 768px) {
