--- a/src/Home/Project.module.css
+++ b/src/Home/Project.module.css
@@ -53,10 +53,12 @@
   transition: 1s ease;
 }
 
-.card img,
-video {
+.card img {
   max-width: 60%;
-  height: 100%;
+}
+
+.card video {
+  max-width: 60%;
 }
 
 .cardDesc {
@@ -106,10 +108,6 @@ video {
     flex-direction: column;
   }
 
-  .card img,
-  video {
-    max-width: 60%;
-  }
 }
 
 @media screen and (max-width: 768px) {
@@ -118,6 +116,7 @@ video {
     flex-direction: column;
     align-items: center;
   }
+  
   .card {
     margin-top: 1.5rem;
     max-width: 80vw;
@@ -125,9 +124,5 @@ video {
     background-color: white;
     display: flex;
     flex-direction: column;
-  }
-  .card img,
-  video {
-    max-width: 60%;
   }
 }
