--- a/src/Home/Project.module.css
+++ b/src/Home/Project.module.css
@@ -38,8 +38,9 @@
   min-height: 85vh;
   background-color: #524f81;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: clamp(2rem, 6vw, 8rem);
+  justify-content: center;
+  grid-template-columns: 400px 400px;
+  grid-gap: 40px;
 }
 
 .card {
@@ -49,16 +50,15 @@
   height: 100%;
   background-color: white;
   display: flex;
+  flex-direction: column;
   align-items: center;
   transition: 1s ease;
 }
 
-.card img {
-  max-width: 60%;
-}
-
+.card img,
 .card video {
-  max-width: 60%;
+  width: 100%;
+  height: 400px;
 }
 
 .cardDesc {
@@ -74,11 +74,11 @@
 }
 
 .cardDesc li {
-  border: 1px solid blue;
+  background-color: #e6f7ff;
   border-radius: 10px;
   margin-bottom: 5px;
   padding: 5px;
-  color: blue;
+  color: #333333;
   margin-right: 1rem;
   display: inline-block;
 }
@@ -102,27 +102,26 @@
   color: white;
 }
 
-@media screen and (max-width: 1268px) {
-  .card {
-    display: flex;
-    flex-direction: column;
-  }
-
-}
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1000px) {
   .projectCards {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-  
+
   .card {
     margin-top: 1.5rem;
-    max-width: 80vw;
+    width: 80vw;
     height: 100%;
     background-color: white;
     display: flex;
     flex-direction: column;
+  }
+
+  .card img,
+  .card video {
+    width: 100%;
+    height: 60%;
+    object-fit: fill;
   }
 }
