--- a/src/Home/Project.module.css
+++ b/src/Home/Project.module.css
@@ -1,6 +1,6 @@
 .project {
   height: max-content;
-  min-height: 100vh;
+  min-height: 30vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -33,25 +33,15 @@
 
 .projectCards {
   height: fit-content;
-  padding: clamp(2rem, 6vw, 6rem);
+  padding: 100px 0px;
   width: 100%;
-  min-height: 85vh;
+  min-height: 50vh;
   background-color: #524f81;
-  display: grid;
-  justify-content: center;
-  grid-template-columns: 400px 400px;
-  grid-gap: 40px;
-}
-
-.card {
-  border-radius: 12px;
-  overflow: hidden;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
-  transition: 1s ease;
+  justify-content: center;
+  overflow: hidden;
 }
 
 .card img,
@@ -99,27 +89,4 @@
   background-color: #778899;
   border-radius: 10px;
   color: white;
-}
-
-@media screen and (max-width: 1000px) {
-  .projectCards {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .card {
-    margin-top: 1.5rem;
-    width: 80vw;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .card img,
-  .card video {
-    width: 100%;
-    height: 60%;
-    object-fit: fill;
-  }
 }
